# dagster-template

./: .gitignore  Dockerfile  LICENSE  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  regenerate_requirements.sh  requirements.txt  run_dev_container.sh  run_pip_tools.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
requirements/: dev-requirements.txt  pyproject.toml  regenerate_requirements.sh  requirements.txt
src/: dev-requirements.txt  lint.sh  pyproject.toml  requirements.txt  start.sh  tox.ini  workspace.yaml
src/dagster_project/: hello_dagster.py
src/tutorial_finished/: repository.py
src/tutorial_finished/assets/: __init__.py
tests/: run_tests.sh
