[project]
name = "dagster-template"
version = "1"
requires-python = ">3.10"
dependencies = ["dagster", "dagster-webserver", "pandas"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy", "types-requests"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.mypy]
python_version = "3.10"
