[project]
name = "dagster-template"
version = "1"
requires-python = ">3.11"
dependencies = [
    "dagster",
    "dagster-webserver",
    "pandas",
    ]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pandas-stubs",
    "pytest",
    "ruff",
    "types-requests",
    ]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.mypy]
python_version = "3.11"
