[project]
name = "dagster-template"
version = "1"
dependencies = [
    "dagit",
    "dagster",
    "dagstermill",
    "papermill-origami>=0.0.8",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "notebook"
    ]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy", "types-requests"]
